--- a/less/blocks/download.less
+++ b/less/blocks/download.less
@@ -3,20 +3,17 @@
   .inner();
   padding-top: 28px;
   padding-bottom: 28px;
-  font-family: @font-family;
   text-align: center;
   color: #ffffff;
   background-color: rgb(40, 54, 69);
 
-
-  &__list {
+  .download__list {
     margin: 0;
     padding: 0;
     list-style: none;
   }
 
-
-  &__btn {
+  .download__btn {
     font-size: 18px;
     line-height: 18px;
     font-weight: bold;
@@ -24,7 +21,7 @@
     text-decoration: none;
   }
 
-  &__info {
+  .download__info {
     margin: 0;
     padding: 0;
     font-size: 14px;
