--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,12 +1,8 @@
 .main-nav {
-  margin: 0;
-  padding: 0;
   color: #ffffff;
-  font-family: @font-family;
   font-weight: bold;
 
-
-  &__list {
+  .main-nav__list {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -16,8 +12,7 @@
     text-transform: uppercase;
   }
 
-
-  &__item {
+  .main-nav__item {
     padding-top: 20px;
     padding-bottom: 20px;
     border-top: 1px solid black;
@@ -28,6 +23,5 @@
       color: #ffffff;
       text-decoration: none;
     }
-
   }
 }
