--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -3,7 +3,11 @@
   padding: 0;
   background-color: rgb(40, 54, 69);
 
-  &__title {
+  .page-header__logo {
+    .inner();
+  }
+
+  .page-header__title {
     .visually-hidden();
   }
 }
