--- a/less/blocks/price.less
+++ b/less/blocks/price.less
@@ -1,27 +1,25 @@
 .price {
-  font-family: @font-family;
   background-color: rgb(242, 242, 242);
 
-
-  &__wrapper{
+  .price__wrapper{
     margin: 0 auto;
     padding-top: 50px;
     padding-bottom: 50px;
   }
 
-  &__item {
+  .price__item {
     margin: 0;
     padding: 0;
     list-style: none;
   }
 
-  &__title {
+  .price__title {
     background-color: rgb(40, 54, 69);
     text-align: center;
     color: #ffffff;
   }
 
-  &__item-title {
+  .price__item-title {
     margin-bottom: 10px;
     font-size: 18px;
     line-height: 30px;
@@ -29,15 +27,14 @@
     text-transform: uppercase;
   }
 
-
-  &__value {
+  .price__value {
     font-size: 24px;
     line-height: 30px;
     font-weight: lighter;
 
   }
 
-  &__access {
+  .price__access {
     padding: 22px 6.25% 24px 6.25%;
     font-size: 14px;
     line-height: 30px;
