--- a/less/blocks/promo.less
+++ b/less/blocks/promo.less
@@ -1,11 +1,9 @@
 .promo {
   margin: 0;
   min-height: 262px;
-  font-family: @font-family;
   background: rgb(40, 54, 69) url("../img/bg-back-mobile@1x.jpg") 50% 50% no-repeat;
 
-
-  &__title {
+  .promo__title {
     margin: 0;
     padding: 36px 6.25% 39px 6.25%;
     font-size: 24px;
