--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -1,19 +1,18 @@
 .reviews {
   margin: 0;
   padding: 0;
-  font-family: @font-family;
 
-  &__wrapper {
+  .reviews__wrapper {
     .inner();
   }
 
-  &__item {
+  .reviews__item {
     margin: 0;
     padding: 0;
     list-style: none;
   }
 
-  &__item-title {
+  .reviews__item-title {
     padding-left: 80px;
     padding-right: 80px;
     font-size: 18px;
@@ -22,11 +21,9 @@
     text-align: center;
   }
 
-
-  &__item-description {
+  .reviews__item-description {
     font-size: 14px;
     line-height: 30px;
     text-align: center;
   }
-
 }
