--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -1,24 +1,20 @@
 .feedback {
-  font-family: @font-family;
   text-align: center;
 
-
-  &__title {
+  .feedback__title {
     .visually-hidden;
   }
 
-
-  &__promo {
+  .feedback__promo {
     font-size: 24px;
   }
 
-
-  &__contacts-method {
+  .feedback__contacts-method {
     display: block;
     font-size: 18px;
   }
 
-  &__contacts-text {
+  .feedback__contacts-text {
     font-size: 24px;
   }
 }
