--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -1,27 +1,22 @@
 .form {
-  font-family: @font-family;
 
-
-  &__promo {
+  .form__promo {
     .inner();
     padding-top: 54px;
     margin-bottom: 34px;
   }
 
-
-  &__group {
+  .form__group {
     .inner();
     padding-bottom: 44px;
     border: none;
-
 
     &--grey {
       background-color: rgb(242, 242, 242);
     }
   }
 
-
-  &__label {
+  .form__label {
     display: block;
     width: 100%;
     margin-bottom: 14px;
@@ -29,8 +24,7 @@
     text-transform: uppercase;
   }
 
-
-  &__input-text {
+  .form__input-text {
     width: 100%;
     height: 49px;
     margin-bottom: 29px;
