--- a/less/blocks/gallery.less
+++ b/less/blocks/gallery.less
@@ -1,16 +1,14 @@
 .gallery {
-    font-family: @font-family;
     font-size: 14px;
+    color: #283645;
 
-
-    &__post {
+    .gallery__post {
       margin-bottom: 20px;
       .inner();
-      background-color: rgb(242, 242, 242);
+
     }
 
-
-    &__promo {
+    .gallery__promo {
       margin: 0;
       padding: 0;
       padding-top: 54px;
@@ -20,39 +18,39 @@
       text-align: center;
     }
 
-
-    &__post-content {
-      padding: 30px 15px;
+    .gallery__post-photo {
+      font-size: 0;
     }
 
+    .gallery__post-content {
+      padding: 30px 15px;
+      background-color: rgb(242, 242, 242);
+    }
 
-    &__post‐author {
+    .gallery__post-author {
       font-style: normal;
       font-weight: bold;
     }
 
-
-    &__post-date {
+    .gallery__post-date {
       text-transform: uppercase;
     }
 
-
-    &__post-text {
+    .gallery__post-text {
       margin: 0;
       margin-top: 20px;
       margin-bottom: 20px;
       padding: 0;
+
     }
 
-
-    &__post-likes {
+    .gallery__post-likes {
       color: #d22856;
       text-transform: uppercase;
     }
 
-
-    &__call-to-action {
-      margin: 0;
+    .gallery__call-to-action {
+      margin: 0 auto;
       padding: 49px 0 32px 0;
       line-height: 30px;
       text-align: center;
