--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -2,13 +2,11 @@
   .inner();
   text-align: center;
 
-
-  &__logo {
+  .page-footer__logo {
     margin-bottom: 43px;
   }
 
-
-  &__social {
+  .page-footer__social {
     margin-bottom: 50px;
   }
 
