--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,6 @@
 @import "variables.less";
 @import "mixins.less";
+@import "global.less";
 
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
