--- a/less/blocks/upload.less
+++ b/less/blocks/upload.less
@@ -4,4 +4,31 @@
   padding: 0;
   text-align: center;
   background-color: rgb(242, 242, 242);
+
+  img {
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+}
+
+.upload__btn-wrapper {
+  .container();
+  margin-bottom: 40px;
+}
+
+.upload__btn {
+  height: 44px;
+}
+
+.upload__controls{
+  .container();
+  margin-bottom: 70px;
+}
+
+.upload__range {
+  display: none;
+  &--show {
+    display: block;
+    width: 100%;
+  }
 }
