--- a/less/variables.less
+++ b/less/variables.less
@@ -25,4 +25,8 @@
   font-style: normal;
 }
 
-  @font-family: "OpenSans", Arial, sans-serif;
+@font-family: "OpenSans", Arial, sans-serif;
+
+@mobile-widths-only: ~"(max-width: 1199px)";
+@tablet-widths: ~"(min-width: 660px)";
+@desktop-widths: ~"(min-width: 1200px)";
