--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -1,54 +1,309 @@
 .form {
+  display: flex;
+  flex-direction: column;
+}
 
+.form__promo {
+  .container();
+  padding-top: 50px;
+  margin-bottom: 34px;
+  line-height: 30px;
+  text-align: center;
+}
+
+.form__group {
+  position: relative;
+  padding-top: 5px;
+  border: none;
+  &--initials {
+    padding-bottom: 23px;
+  }
+  &--contacts {
+    padding-top: 20px;
+    padding-bottom: 54px;
+  }
+  &--app {
+    background-color: rgb(242, 242, 242);
+    padding-bottom: 10px;
+    padding-top: 50px;
+    margin-bottom: 20px;
+  }
+  &--progress {
+    margin-bottom: 0;
+    padding-top: 123px;
+    background-color: rgb(242, 242, 242);
+  }
+  &--textarea {
+    padding-top: 27px;
+    margin-bottom: 28px;
+  }
+  & > legend {
+    display: table;
+    width: 230px;
+    margin: 0 auto;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    top: 45px;
+    line-height: 18px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #d22856;
+  }
+  > .form__legend--textarea {
+    top: 20px;
+  }
+  > .form__legend--show {
+    display: none;
+  }
+}
+
+.form__container {
+  .container();
+}
+
+.form__label {
+  display: block;
+  padding-left: 22px;
+  margin-bottom: 17px;
+  color: #d22856;
+  text-transform: uppercase;
+}
+
+.form__input-text {
+  margin-bottom: 29px;
+  padding-left: 20px;
+  width: 100%;
+  height: 59px;
+  font-family: @font-family;
+  font-size: 18px;
+}
+
+.form__checkbox {
+  display: none;
+}
+
+.form__checkbox + .form__checkbox-label::before {
+  content: "";
+  position: absolute;
+  left: 19px;
+  width: 39px;
+  height: 39px;
+  display: inline-block;
+  vertical-align: middle;
+  background-color: #fff;
+  border: 2px solid #e5e5e5;
+}
+
+.form__checkbox-label {
+  position: relative;
+  display: block;
+  margin-bottom: 60px;
+  padding-left: 67px;
+  font-size: 18px;
+  line-height: 39px;
+}
+
+.form__radio {
+  display: none;
+}
+
+.form__radio-label {
+  display: block;
+  font-size: 18px;
+  margin-bottom: 46px;
+  cursor: pointer;
+  &:first-of-type {
+    margin-top: 71px;
+  }
+}
+
+.form__radio + .form__radio-label {
+  position: relative;
+  padding-left: 70px;
+}
+
+.form__radio + .form__radio-label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  bottom: 50%;
+  transform: translateY(-50%);
+  width: 39px;
+  height: 39px;
+  background-color: #fff;
+  border: 2px solid #e5e5e5;
+  border-radius: 50%;
+  margin-right: 30px;
+}
+
+.form__radio + .form__radio-label:hover::before {
+  border: 2px solid #283645;
+}
+
+.form__radio + .form__radio-label:active::before {
+  border: 2px solid #d22856;
+  background-color: #d22856;
+  box-shadow: inset 0px 0px 0 10px #fff;
+}
+
+.form__radio:checked + .form__radio-label::after {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  left: 12px;
+  top: 50%;
+  bottom: 50%;
+  transform: translateY(-50%);
+  background-color: #d22856;
+  border-radius: 50%;
+}
+
+.form__textarea {
+  color: #283645;
+  border: 2px solid rgb(242, 242, 242);
+  resize: none;
+  font-size: 18px;
+  line-height: 30px;
+  width: 100%;
+  min-height: 200px;
+  padding: 20px;
+  margin-top: 35px;
+}
+
+@media @tablet-widths {
+
+.form {
+  flex-wrap: wrap;
+  flex-direction: row;
+  .container();
+}
+
+.form__promo {
+  order: -4;
+  font-size: 18px;
+  margin-bottom: 64px;
+}
+
+.form__group {
+  border: 1px solid #e5e5e5;
+  margin-bottom: 60px;
+  padding-top: 0;
+  width: 100%;
+
+  &--initials {
+    border: none;
+    order: -3;
+    margin-bottom: 25px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  &--app {
+    background-color: #fff;
+    order: -2;
+    padding-bottom: 11px;
+  }
+
+  &--progress {
+    background-color: #fff;
+    padding-bottom: 10px;
+    padding-top: 53px
+  }
+
+  &--contacts {
+    display: block;
+    padding: 44px 76px 30px 59px;
+    order: -1;
+    margin-bottom: 58px;
+  }
+
+  & > legend {
+    top: -15px;
+    width: auto;
+    padding-left: 31px;
+    padding-right: 33px;
+    line-height: 30px;
+    white-space: nowrap;
+    background: white;
+  }
+
+  > .form__legend-textarea {
+    top: 10px;
+  }
+
+  > .form__legend--show {
+    display: block;
+  }
+
+  .form__inner {
+    display: flex;
+    flex-direction: row;
+
+    .form__label {
+      padding-right: 20px;
+      line-height: 59px
+    }
+  }
+}
+
+
+@media @desktop-widths {
   .form__promo {
-    .inner();
-    padding-top: 54px;
-    margin-bottom: 34px;
+    order: -4;
   }
 
   .form__group {
-    .inner();
-    padding-bottom: 44px;
-    border: none;
+    margin-right: 0;
+    margin-left: 0;
+    padding: 0;
+    &--initials {
+      width: 450px;
+      margin-right: 50px;
+      order: -3;
+      padding: 0;
+      padding-top: 5px;
+    }
+    &--app {
+        width: 440px;
+        order: -2;
+        padding-bottom: 20px;
+        margin-bottom: 68px;
+    }
+    &--contacts {
+        width: 100%;
+        order: -1;
+        padding-top: 42px;
+        padding-bottom: 14px;
+        margin-bottom: 68px;
+    }
+    &--progress {
+      min-height: 240px;
+      padding-top: 45px;
+      margin-bottom: 58px;
 
-    &--grey {
-      background-color: rgb(242, 242, 242);
+      .form__container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+      }
+    }
+
+    &--textarea {
+      width: 100%;
     }
   }
-
-  .form__label {
-    display: block;
-    width: 100%;
-    margin-bottom: 14px;
-    color: #d22856;
-    text-transform: uppercase;
-  }
-
-  .form__input-text {
-    width: 100%;
-    height: 49px;
-    margin-bottom: 29px;
-  }
-
-
-  &__radio {
-    width: 100&;
-  }
-
-
-  &__text {
-    color: #d22856;
-    text-transform: uppercase;
-  }
-
-  &__textarea {
-    width: 100%;
-  }
-
-
-  &__btn {
-    margin-left: 6.25%;
-    margin-right: 6.25%;
-    width: 276px;
+  .form__checkbox-label {
+      position: relative;
+      display: block;
+      width: 290px;
+      margin-bottom: 60px;
+      padding-left: 80px;
+      font-size: 18px;
+      line-height: 39px;
   }
 }
+
