--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,27 +1,170 @@
 .main-nav {
+  position: relative;
+  width: 100%;
+  padding: 0;
   color: #ffffff;
   font-weight: bold;
 
+  &--closed {
+    background-color: rgba(29, 38, 50, 0.3);
+  }
+}
+
+.main-nav__logo {
+  padding: 20px;
+  padding-bottom: 25px;
+  text-align: left;
+  top: 0;
+}
+
+.main-nav__toggler  {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  z-index: 20;
+  display: block;
+  width: 85px;
+  height: 50px;
+  font-size: 0;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
+
+.main-nav--closed .main-nav__toggler::before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 17px;
+  width: 50px;
+  height: 4px;
+  background-color: #ffffff;
+  box-shadow: 0 10px 0 0 #ffffff,
+              0 20px 0 0 #ffffff;
+}
+
+.main-nav__list {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  list-style: none;
+  text-align: center;
+  font-size: 18px;
+  line-height: 32px;
+  text-transform: uppercase;
+  background-color: #263341;
+}
+
+.main-nav__item {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-top: 1px solid #1d2631;
+  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.15);
+
+  a {
+    display: block;
+    color: #ffffff;
+    text-decoration: none;
+  }
+}
+
+@media @mobile-widths-only {
+  .main-nav--closed .main-nav__list {
+    display: none;
+  }
+
+  .main-nav--opened .main-nav__wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 70px;
+    z-index: 10;
+    height: 80vh;
+    background-color: #6a4d38;
+  }
+
+  .main-nav--nojs .main-nav__toggler {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__wrapper {
+    position: static;
+    height: auto;
+  }
+
+  .main-nav--nojs .main-nav__list {
+    display: block;
+  }
+
+  .main-nav--nojs .main-nav__item--active a {
+    padding-right: 21px;
+    padding-left: 21px;
+    text-align: left;
+  }
+}
+
+@media @tablet-widths {
+  .main-nav {
+    margin: 0 auto;
+  }
+
+  .main-nav__logo {
+    padding: 28px 0 42px 41px;
+  }
+
   .main-nav__list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-align: center;
-    font-size: 18px;
-    line-height: 32px;
-    text-transform: uppercase;
+    display: none;
+  }
+}
+
+@media @desktop-widths {
+
+  .main-nav {
+    display: flex;
+  }
+
+  .main-nav__toggler {
+    display: none;
+  }
+
+  .main-nav__logo {
+    margin-left: 120px;
+    margin-right: 171px;
+  }
+
+  .main-nav__wrapper {
+    width: 100%;
+  }
+
+  .main-nav__list {
+    display: flex;
+    justify-content: space-around;
+    text-transform: none;
+    font-weight: normal;
+    background-color: transparent;
   }
 
   .main-nav__item {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    border: none;
+  }
 
-    & a {
-      display: block;
-      color: #ffffff;
-      text-decoration: none;
+  .main-nav__item a {
+    padding-right: 31px;
+    padding-left: 31px;
+  }
+
+  .main-nav__item a[href] {
+    &:hover {
+      color: #000000;
+
+      background-color: #ffffff;
+    }
+
+    &:active {
+      color: rgba(0, 0, 0, 0.3);
+
+      background-color: #ffffff;
+      opacity: 1;
     }
   }
 }
