--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -1,16 +1,71 @@
 .page-footer {
-  .inner();
-  text-align: center;
+  .container();
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 40px;
 
-  .page-footer__logo {
-    margin-bottom: 43px;
-  }
-
-  .page-footer__social {
-    margin-bottom: 50px;
-  }
-
-  &--hide {
+    &--hide {
     display: none;
+  }
+}
+
+.page-footer__logo {
+  margin-bottom: 43px;
+}
+
+.page-footer__social {
+  margin-bottom: 50px;
+}
+
+
+@media @tablet-widths {
+  .page-footer {
+    &--hide {
+      display: block;
+    }
+  }
+}
+
+.page-footer__logo {
+  width: 150px;
+}
+
+.footer__copyright {
+  width: 220px;
+  height: 50px;
+  font-size: 14px;
+  span {
+    line-height: 50px;
+    vertical-align: middle;
+    font-size: 14px;
+  }
+}
+
+
+@media @tablet-widths {
+  .page-footer {
+    padding-bottom: 40px;
+    flex-direction: row;
+    justify-content: space-between;
+    &--hide {
+      display: flex;
+    }
+  }
+  .page-footer__logo {
+    padding: 0;
+  }
+}
+
+@media @desktop-widths {
+  .page-footer {
+    padding: 70px 0;
+  }
+
+  .page-footer__copyright {
+    width: 250px;
+    span {
+      font-size: 18px;
+    }
   }
 }
