--- a/less/blocks/promo.less
+++ b/less/blocks/promo.less
@@ -1,14 +1,17 @@
 .promo {
   margin: 0;
-  min-height: 262px;
-  background: rgb(40, 54, 69) url("../img/bg-back-mobile@1x.jpg") 50% 50% no-repeat;
+}
+.promo__title {
+  margin: 0;
+  padding: 36px 6.25% 39px 6.25%;
+  font-size: 24px;
+  font-weight: lighter;
+  color: #ffffff;
+  text-align: center;
+}
 
-  .promo__title {
-    margin: 0;
-    padding: 36px 6.25% 39px 6.25%;
-    font-size: 24px;
-    font-weight: lighter;
-    color: #ffffff;
-    text-align: center;
+@media @tablet-widths {
+  .promo img {
+    display: none;
   }
 }
