--- a/less/global.less
+++ b/less/global.less
@@ -14,5 +14,13 @@ body {
 body {
   font-family: @font-family;
   font-size: 14px;
+  line-height: 24px;
+  color: #000000;
   background: #ffffff;
+  min-width: 320px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
