--- a/less/style.less
+++ b/less/style.less
@@ -7,11 +7,12 @@
 @import "blocks/page-content.less";
 @import "blocks/promo.less";
 @import "blocks/download.less";
-@import "blocks/list-os.less";
 @import "blocks/advantages.less";
+@import "blocks/research.less";
 @import "blocks/reviews.less";
 @import "blocks/price.less";
 @import "blocks/feedback.less";
+@import "blocks/map.less";
 @import "blocks/page-footer.less";
 @import "blocks/form.less";
 @import "blocks/gallery.less";
