--- a/less/blocks/feedback.less
+++ b/less/blocks/feedback.less
@@ -11,6 +11,7 @@
 .feedback__promo {
   margin-bottom: 30px;
   font-size: 24px;
+  font-weight: lighter;
   line-height: 30px;
   text-align: center;
 }
