--- a/less/blocks/advantages.less
+++ b/less/blocks/advantages.less
@@ -20,6 +20,11 @@
   font-weight: lighter;
 }
 
+.advantages__inner {
+  background: rgb(242, 242, 242) url(../img/bg-triangle-white.svg) no-repeat;
+  background-size: contain;
+}
+
 .advantages__wrapper {
   .container();
   display: flex;
@@ -31,8 +36,7 @@
   flex-direction: column;
   margin: 0;
   padding: 0;
-  padding-top: 47px;
-  padding-bottom: 47px;
+  padding-top: 80px;
   list-style: none;
   text-align: center;
 }
@@ -42,21 +46,46 @@
   flex-direction: column;
 }
 
+.advantages__item-title {
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.advantages__item-text {
+  margin: 0;
+  margin-bottom: 37px;
+}
+
 .advantages__item-photo {
     display: none;
+}
+
+.advantages__photo {
+  height: 280px;
+  overflow: hidden;
 }
 
 
 @media @tablet-widths {
   .advantages__promo {
-    padding-top: 58px;
-    padding-bottom: 58px;
+    padding-top: 52px;
+    padding-bottom: 40px;
   }
 
   .advantages__slogan {
     font-size: 40px;
-    line-height: auto;
+    line-height: 50px;
     margin-bottom: 0;
+
+    &--wide {
+      padding-bottom: 0;
+    }
+
+    &--narrow {
+      padding-bottom: 0;
+      padding-left: 40px;
+      padding-right: 40px;
+    }
   }
 
   .advantages__wrapper {
@@ -65,12 +94,25 @@
 
   .advantages__list {
     flex-direction: column;
-    padding-top: 47px;
-    padding-bottom: 37px;
+    width: 50%;
+    text-align: left;
+    padding: 0;
+    padding-top: 70px;
+  }
+
+  .advantages__item-title {
+    margin: 0;
+    margin-bottom: 15px;
+  }
+
+  .advantages__item-text {
+    margin: 0;
+    margin-bottom: 40px;
   }
 
   .advantages__photo {
     display: block;
+    width: 50%;
   }
 }
 
@@ -82,19 +124,50 @@
 
   .advantages__slogan {
     font-size: 50px;
-    line-height: auto;
+    line-height: 60px;
     margin-bottom: 0;
+
+    &--narrow {
+      width: 500px;
+    }
   }
 
   .advantages__list {
-    flex-direction: row-reverse;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
     padding-top: 47px;
     padding-bottom: 47px;
+    text-align: center;
+  }
+
+  .advantages__item {
+    width: 300px;
+  }
+
+  .advantages__item-title {
+    margin: 0 auto;
+    width: 250px;
+    font-size: 30px;
+    line-height: 36px;
+    margin-bottom: 40px;
+  }
+
+  .advantages__item-text {
+    padding: 0 32px;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: center;
   }
 
   .advantages__item-photo {
     display: block;
     order: -1;
+    width: 300px;
+    height: 280px;
+    overflow: hidden;
+    margin-bottom: 56px;
+    box-shadow: inset 0 -5px 10px -10px #34495e;
   }
 
   .advantages__photo {
