--- a/less/blocks/gallery.less
+++ b/less/blocks/gallery.less
@@ -16,6 +16,26 @@
   text-align: center;
 }
 
+.gallery__photo-daily {
+  position: relative;
+  &::before {
+    content: "Панорама дня";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 140px;
+    height: 36px;
+    text-transform: uppercase;
+    background-color: #d22856;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 36px;
+    color: #fff;
+  }
+}
+
 .gallery__post-wrapper {
   .container();
   display: flex;
@@ -24,15 +44,28 @@
   justify-content: space-between;
 }
 
-.gallery__post {
-  margin-bottom: 20px;
-}
+.gallery__post-content {
+  padding: 18px;
+  padding-bottom: 21px;
+  display: flex;
+  flex-direction: column;
+  line-height: 24px;
 
-.gallery__content-daily {
+  &--daily {
   .container();
   margin-bottom: 20px;
   padding: 30px 15px;
   background-color: rgb(242, 242, 242);
+  }
+}
+
+.gallery__post {
+  margin-bottom: 20px;
+}
+
+.gallery__photo-daily,
+.gallery__post-photo {
+  margin-bottom: -6px;
 }
 
 .gallery__post-content {
@@ -41,30 +74,45 @@
 }
 
 .gallery__post-author {
+  font-size: 14px;
   font-style: normal;
   font-weight: bold;
 }
 
 .gallery__post-date {
+  font-size: 12px;
+  font-weight: lighter;
   text-transform: uppercase;
 }
 
 .gallery__post-text {
   margin: 0;
   margin-top: 20px;
-  margin-bottom: 20px;
   padding: 0;
 }
 
 .gallery__post-likes {
+  display: flex;
+  align-items: center;
+  margin-top: auto;
+  position: relative;
+  width: 100%;
   color: #d22856;
   text-transform: uppercase;
 }
 
+.gallery__post-btn {
+  margin-right: 15px;
+  width: 14px;
+  height: 12px;
+  font-size: 0;
+  background: url(../img/icon-heart.svg) no-repeat center;
+}
+
 .gallery__call-to-action {
   .container();
-  width: 100%;
   padding: 20px 0 32px 0;
+  font-size: 14px;
   line-height: 30px;
   text-align: center;
 }
@@ -74,7 +122,6 @@
   .gallery {
     flex-direction: column;
     margin-top: 93px;
-    margin-bottom: 40px;
   }
 
   .gallery__promo {
@@ -85,6 +132,9 @@
 
   .gallery__post-daily {
     width: 100%;
+    &::before {
+      top: 60px;
+    }
   }
 
   .gallery__post-wrapper {
@@ -96,6 +146,41 @@
     font-size: 14px;
   }
 
+
+  .gallery__post-content {
+    min-height: 155px;
+
+    &--daily {
+      min-height: 120px;
+      flex-direction: row;
+      flex-wrap: wrap;
+      padding-top: 24px;
+      padding-bottom: 21px;
+    }
+  }
+
+  .gallery__info {
+    &--daily {
+      order: -2;
+      height: 20px;
+    }
+  }
+
+  .gallery__post-likes {
+    justify-content: space-between;
+
+    &--daily {
+      order: -1;
+      margin-top: 0;
+      margin-left: auto;
+      width: 200px;
+    }
+  }
+
+  .gallery__post-btn {
+    order: 1;
+  }
+
   .gallery__post-text {
     min-height: 63px;
   }
@@ -103,13 +188,29 @@
 
 @media @desktop-widths {
 
+  .gallery__post-daily {
+    &::before {
+      top: 55px;
+    }
+  }
+
   .gallery__promo {
     width: 780px;
     margin-bottom: 76px;
     font-size: 18px;
   }
 
+ .gallery__post-content {
+    &--daily {
+      min-height: auto;
+      padding-top: 20px;
+      padding-bottom: 25px;
+    }
+  }
+
   .gallery__call-to-action {
     width: 100%;
+    font-size: 18px;
+    line-height: 30px;
   }
 }
