--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -16,8 +16,9 @@
 
 .main-nav__logo {
   top: 0;
-  padding: 20px;
-  padding-bottom: 25px;
+  padding-top: 21px;
+  padding-bottom: 19px;
+  padding-left: 20px;
   text-align: left;
 }
 
@@ -64,13 +65,13 @@
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.15);
 
   &--active {
-    padding: 16px 0 15px 0;
+    padding: 15px 0 16px 0;
     font-weight: bold;
   }
 
   a {
     display: block;
-    padding: 16px 0;
+    padding: 15px 0 16px 0;
     font-size: 18px;
     line-height: 32px;
     font-weight: bold;
@@ -148,6 +149,7 @@
   }
 
   .main-nav__logo {
+    padding: 0;
     margin-right: 132px;
   }
 
@@ -155,17 +157,21 @@
     .container();
     display: flex;
     flex-direction: row;
+    align-items: center;
+    min-height: 110px;
   }
 
   .main-nav__list {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     text-transform: none;
     background-color: transparent;
   }
 
   .main-nav__item {
     border: none;
+    box-shadow: none;
 
     &--active {
       padding-right: 41px;
