--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -1,18 +1,52 @@
 .map {
   position: relative;
-  width: 100%;
   height: 200px;
-  background: #ECE4C8 url(../img/bg-map-mobile@1x.png) no-repeat center;
+
+  iframe {
+    width: 100%;
+    height: 200px;
+  }
+}
+
+.map__background {
+  position: absolute;
+  height: 33px;
+  top: -1px;
+  right: 0;
+  left: 0;
+  background: url(../img/bg-triangle-white-footer.svg) top center no-repeat;
+  background-size: auto 100%;
+  z-index: 2;
 }
 
 @media @tablet-widths {
   .map {
-    height: 405px;
+    height: 375px;
+    margin-bottom: 35px;
+
+    iframe {
+    width: 100%;
+    height: 375px;
+    }
   }
 
+  .map__background {
+    height: 72px;
+  }
 }
+
 @media @desktop-widths {
   .map {
     height: 523px;
+    margin-bottom: 0;
+
+    iframe {
+    width: 100%;
+    height: 523px;
+    }
+  }
+
+  .map__background {
+    height: 125px;
   }
 }
