--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -9,5 +9,52 @@
 }
 
 .page-header__title {
-  .visually-hidden();
+  margin: 0;
+  .container();
+  padding-top: 36px;
+  padding-bottom: 65px;
+  font-size: 24px;
+  font-weight: lighter;
+  color: #ffffff;
+  text-align: center;
+
+  &--hide {
+    .visually-hidden();
+  }
+
+  &--form {
+    padding-top: 7px;
+    padding-bottom: 36px;
+  }
+}
+
+.page-header__photo {
+  margin-bottom: -7px;
+  padding-top: 107px;
+}
+
+@media @tablet-widths {
+  .page-header__title {
+    padding-bottom: 105px;
+    font-size: 50px;
+    line-height: 61px;
+
+    &--form {
+      padding-bottom: 45px;
+      padding-top: 36px;
+    }
+  }
+
+  .page-header__photo{
+    display: none;
+  }
+}
+
+@media @desktop-widths {
+
+  .page-header__title {
+    padding-top: 30px;
+    padding-bottom: 66px;
+    font-size: 50px;
+  }
 }
