--- a/less/blocks/price.less
+++ b/less/blocks/price.less
@@ -1,6 +1,8 @@
 .price {
   padding-top: 92px;
   padding-bottom: 43px;
+  background: rgb(242, 242, 242) url(../img/bg-triangle-white.svg) no-repeat;
+  background-size: contain;
 
   td,
   th {
@@ -75,6 +77,7 @@ th.price__tariff-option {
       left: -33px;
       height: 25px;
       width: 112px;
+      background-color: rgb(240, 40, 86);
       transform: rotate(135deg);
     }
 
