--- a/less/blocks/upload.less
+++ b/less/blocks/upload.less
@@ -12,13 +12,11 @@
 }
 
 .upload__photo {
-  .container();
   padding-top: 20px;
   padding-bottom: 40px;
 }
 
 .upload__items-wrapper {
-  .container();
   margin-bottom: 40px;
 }
 
@@ -47,9 +45,48 @@
 }
 
 .upload__btn {
-  margin-bottom: 12px;
-  height: 44px;
+  display: block;
+  margin: 12px auto;
+  padding: 10px 0;
+  width: 280px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  color: #d22856;
+  border: 3px solid #d22856;
+  border-radius: 50px;
+  background-color: #ffffff;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &:hover {
+    background-color: #d22856;
+    color: #fff
+  }
+  &:active {
+    color: #e07e94;
+  }
+  &--cancel {
+
+    border: 3px solid #283645;
+    color: #283645;
+    opacity: 0.1;
+
+    &:hover {
+      opacity: .3;
+      background-color: #fff;
+      color: #283645;
+    }
+
+    &:active {
+      background-color: #283645;
+      color: #fff;
+    }
+  }
 }
+
 
 @media @tablet-widths {
   .upload__form {
@@ -62,15 +99,46 @@
     padding-bottom: 54px;
   }
 
+  .upload__items-wrapper {
+    .container();
+  }
+
   .upload__controls {
-    margin-bottom: 70px;
+    margin-bottom: 30px;
     padding-top: 70px;
   }
 
   .upload__range {
     margin-bottom: 34px;
     &--visibility {
-    display: block;
+      display: block;
     }
+  }
+
+  .upload__btn {
+    margin: 0 auto;
+    margin-bottom: 20px;
+    width: 260px;
+  }
+}
+
+@media @desktop-widths {
+  .upload__items-wrapper {
+    width: 410px;
+  }
+
+  .upload__controls {
+    margin-bottom: 140px;
+  }
+
+  .upload__btns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .upload__btn {
+    width: 185px;
+    margin: 0;
   }
 }
