--- a/less/style.less
+++ b/less/style.less
@@ -5,15 +5,16 @@
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/page-content.less";
-@import "blocks/promo.less";
 @import "blocks/download.less";
 @import "blocks/advantages.less";
 @import "blocks/research.less";
 @import "blocks/reviews.less";
+@import "blocks/slider.less";
 @import "blocks/price.less";
 @import "blocks/feedback.less";
 @import "blocks/map.less";
 @import "blocks/page-footer.less";
+@import "blocks/social-link.less";
 @import "blocks/form.less";
 @import "blocks/gallery.less";
 @import "blocks/upload.less";
